Arreglos
•	Quitardo el botón de scrollview del comparador en la vista de AlgoritmView
•	Puesto indicador de la imagen seleccionada en el scrollview de algoritmview
•	Realizar ‘<’ y ‘>’ desde teclado en el Algoritmview
•	Hacer que el foco lo obtenga la pestaña de imagen y no la de Excel al pintar la ventana
•	No permitir cerrar la ventana de Algorithmview hasta que no termine su proceso
•	Arreglado como se estaba cogiendo el directorio nuevo a la hora de cambiar de directorio, puesto que a pesar de que comprueba las imágenes que ha dentro del nuevo directorio, a la hora de procesar las imágenes estaba cogiendo el viejo.
•	Cambiada la forma en la que se estaba llamando a la ejecución de los programas desde comandos.
•	Cuando se recarga la imagen del Roi cuando este se modifica, se ha hecho que en las imágenes JPG y Tiff no se habrá otra ventana aparte y en su lugar se pinte en la que ya estaba abierta de la ventana principal.
•	Añadido botón close a modify roi tab
•	Limpieza de código
•	Poner un botón para exportar el Excel
•	Hacer que en el algoritmview al hacer un save en el general si está abierto el modificador, se compruebe que si se ha modificado y si se quieren cambiar los datos
•	Cuando pregunta si se quiere guardar el roi en algorithm view si le das a no se cambia la imagen del comparador como si se hubiera guardado la imagen (Arreglado)
•	Se ha cambiado la forma de abrir las imágenes desde ImageJ